syntax = "proto3";
option go_package = "gitlab.ozon.dev/valyankilyan/homework-2-market-bot/api";

package api;

import "google/protobuf/empty.proto";


message Id {
    int64 Id = 1;
}

message User {
    int64 Id = 1;
    string name = 2;
    string tgUserName = 3;
    int64 tgId = 4;
    string tinkoffToken = 5;
}

service MarketBot {
    rpc CreateUser(User) returns (Id) {}
    rpc ReadUser(Id) returns (User) {}
    rpc UpdateUser(User) returns (google.protobuf.Empty) {}
    rpc DeleteUser(Id) returns (google.protobuf.Empty) {}
}